fixing spacing

--- a/stylesheets.css
+++ b/stylesheets.css
@@ -1,3 +1,7 @@
+.container{
+    margin-top: 0px;
+}
+
 #topMainImage{
     width:100%;
     height: 100vh;
